--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Vision7International/743999698176578-designer-ux'>Vision7 International Designer UX | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698387099-ux-designer-ii'>Renaissance UX Designer II | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Minneapolis, MNUnited States</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://coachhub.join.com/jobs/457886-ux-writer-product-content-writer-m-f-d-in-startup-in-berlin'>Job @ Coachhub (Berlin): UX Writer / Product Conte... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin  Berlin, Germany</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698363335-ux-ui-designer'>lm group UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -53,7 +69,7 @@
 <p><span class="badge badge-light">K?ln, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584492'>Stellenangebot: UI/UX Designer (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584492'>Stellenangebot: UI/UX Designer (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -73,7 +89,7 @@
 <p><span class="badge badge-light">Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
 <p><span class="badge badge-light">Delhi/NCR, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -119,11 +135,11 @@
 <p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4497947002'>Job Application for UX/UI Design Coach, London at Flatiron School</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4497947002'>Job Application for UX/UI Design Coach, London at Flatiron School</a></h5> 
 <p><span class="badge badge-light">London London  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://holycodedoo.applytojob.com/apply/tPf1i9A4j0/Mobile-UXUI-Designer-Smallpdf-Team'>Mobile UX/UI designer - Smallpdf team - Holycode - Career Page</a></h5> 
+<h5><a href='http://holycodedoo.applytojob.com/apply/tPf1i9A4j0/Mobile-UXUI-Designer-Smallpdf-Team'>Mobile UX/UI designer - Smallpdf team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -201,7 +217,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=obZkafwo&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ni0AmMwv'>ServiceNow Careers - Lead UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=obZkafwo&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ni0AmMwv'>ServiceNow Careers - Lead UX Designer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Kirkland, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -247,7 +263,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://maxcluster.join.com/jobs/463371-ui-ux-frontend-designer-m-w-d'>Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN</a></h5> 
+<h5><a href='https://maxcluster.join.com/jobs/463371-ui-ux-frontend-designer-m-w-d'>Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -269,7 +285,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=skPaJgwN&__jvsc=Twitter&bid=npORlMwG'>SugarCRM Careers - Senior UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=skPaJgwN&__jvsc=Twitter&bid=npORlMwG'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -385,7 +401,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZkafwG&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nhxxlMwX'>ServiceNow Careers - Lead UX Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZkafwG&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nhxxlMwX'>ServiceNow Careers - Lead UX Architect</a></h5> 
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California  San Diego, CA Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -437,7 +453,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ssuf.join.com/jobs/459577-ui-ux-designer'>Job @ Swiss Startup Factory (Z?rich): UI/UX Designer | JOIN</a></h5> 
+<h5><a href='https://ssuf.join.com/jobs/459577-ui-ux-designer'>Job @ Swiss Startup Factory (Z?rich): UI/UX Designer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -446,24 +462,6 @@
 <p>Posted on:: 2019-10-27</p>
 <hr/>
 <h5><a href='https://mitre.referrals.selectminds.com/jobs/ui-ux-agile-design-engineer-7157'>UI / UX Agile Design Engineer - MITRE Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ETRSearch/743999698208203-ux-researcher-designer-kuala-lumpur'>ETR Search UX Researcher / Designer - Kuala Lumpur | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Kuala Lumpur Kuala Lumpur  Kuala Lumpur Kuala Lumpur Malaysia  Malaysia Kuala Lumpur</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
-      UX/UI Designer - Admind
-    </a></h5> 
-<p><span class="badge badge-light">Krak?w Krak?w</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qODaVfwg&k=Job&j=oc5MafwX&__jvst=Employee+Referral&__jvsd=syFYDhwA&__jvsc=Twitter&bid=nRgmlMw5'>Abrigo Careers - UX Designer</a></h5> 
-<p><span class="badge badge-light">Raleigh, North Carolina</span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dealerspike.com/a66c0f85-05c2-48e2-aaba-e353526381bc'>Dealer Spike - UI/UX Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
