Avery Dennison Data Scientist | SmartRecruiters. Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank. Job Application for  [GO Data Science]Director, Data Science at Coupang. Job Application for Data Scientist at Retina AI. Perpetua Labs - Data Scientist. Data Scientist | Strategic Employment. Job Application for Data Scientist at Twitch. Job Application for Data Scientist at Snowflake. Escale - Data Scientist. Align Technology Careers - Senior Data Scientist/Statistician. Data Scientist - IntelliPro Group Inc. - Career Page. Netflix - Senior Data Scientist, Growth Marketing. Benefitfocus Careers - Sr. Director, Data Science. BlueVine - Data Science QA Developer. Pond5 - Data Scientist. Data Scientist - BlackHorse Solutions - Career Page. Associate Data Scientist | WorkNOLA. Data Scientist, People Analytics. Data Science Interns. HubHaus Inc - Data Scientist - Property Pricing. Job Application for Data Science Intern - Summer 2020 at Optoro. JAVA Applikationsentwickler Fullstack (m/w) | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services.     Data Scientist - Fraud at Simpl . Data Scientist Job in Lisboa, Portugal. Verisk Data Science UK Summer Internship 2019 | SmartRecruiters. Omio Senior Data Scientist - Product Intelligence | SmartRecruiters. Data Science Lead. Amyris - Senior Data Scientist. Freedom Financial Network Careers - Senior Data Scientist. Job Application for Data Analyst, Data Science & Analytics at QuestBridge. Job Application for Graduate Data Scientist at Signifyd. Shopify - Senior Data Scientist (Multiple Roles). Unity Careers - Data Science Manager, Monetization @ San Francisco. Unity Careers - Data Science Manager, Monetization @ San Francisco. Job Application for Associate Data Scientist at Cardlytics. Job Application for Data Scientist  at Cardlytics. Farfetch Careers - Senior Data Science Engineer (Mandarin). LogRocket - Data Scientist. Castlight Health Careers - Software Engineer (Python / Ruby),

--- a/data-science.html
+++ b/data-science.html
@@ -71,11 +71,15 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698404481-data-scientist'>Avery Dennison Data Scientist | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1918875'>Job Application for  [GO Data Science]Director, Data Science at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1918875'>Job Application for  [GO Data Science]Director, Data Science at Coupang</a></h5> 
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -111,7 +115,7 @@
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/2089030b-b32c-491d-9dfd-6685fb3f620c'>Netflix - Senior Data Scientist, Growth Marketing</a></h5> 
+<h5><a href='https://jobs.lever.co/netflix/2089030b-b32c-491d-9dfd-6685fb3f620c'>Netflix - Senior Data Scientist, Growth Marketing</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -166,11 +170,11 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qreer.com/jobs/view/10441/data-scientist'>Data Scientist Job in Lisboa, Portugal</a></h5> 
+<h5><a href='https://www.qreer.com/jobs/view/10441/data-scientist'>Data Scientist Job in Lisboa, Portugal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698269045-data-science-uk-summer-internship-2019'>Verisk Data Science UK Summer Internship 2019 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698269045-data-science-uk-summer-internship-2019'>Verisk Data Science UK Summer Internship 2019 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -182,7 +186,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/amyris/f441c4f7-cfd7-4097-97be-2c6883decf14'>Amyris - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amyris/f441c4f7-cfd7-4097-97be-2c6883decf14'>Amyris - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Emeryville, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -271,7 +275,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ETRSearch/743999698208172-data-scientist-kuala-lumpur'>ETR Search Data Scientist - Kuala Lumpur | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ETRSearch/743999698208172-data-scientist-kuala-lumpur'>ETR Search Data Scientist - Kuala Lumpur | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Kuala Lumpur  Kuala Lumpur Kuala Lumpur Malaysia  Malaysia Kuala Lumpur</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -281,7 +285,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://entrepreneursorganization.applytojob.com/apply/TLgOtsyqxO/Manager-Data-Science-Process-Improvement'>Manager, Data Science & Process Improvement - Entrepreneurs' Organization - Career Page</a></h5> 
+<h5><a href='http://entrepreneursorganization.applytojob.com/apply/TLgOtsyqxO/Manager-Data-Science-Process-Improvement'>Manager, Data Science & Process Improvement - Entrepreneurs' Organization - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -289,11 +293,11 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/459073-data-science-praktikum-w-m-d'>Job @ Westphalia DataLab  (M?nster): Data Science ... | JOIN</a></h5> 
+<h5><a href='https://westphalia-datalab.join.com/jobs/459073-data-science-praktikum-w-m-d'>Job @ Westphalia DataLab  (M?nster): Data Science ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hackerearthjobs.recruiterbox.com/jobs/fk0fl9w'>
+<h5><a href='http://hackerearthjobs.recruiterbox.com/jobs/fk0fl9w'>
     Data Science Intern at HackerEarth
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -319,7 +323,7 @@ and?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/app/share/1CurNTNQNx'>Data Scientist</a></h5> 
+<h5><a href='http://assembly.applytojob.com/app/share/1CurNTNQNx'>Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Data Scientist. Los Angeles, CA; Full Time; Mid Level. Enter your name and email 
 to generate a unique referral link and receive credit for anyone who applies?...</p>
@@ -446,7 +450,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4494309002'>Job Application for Data Scientist  at KeepTruckin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4494309002'>Job Application for Data Scientist  at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">San Francisco, California United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -462,7 +466,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/modeanalytics/jobs/1931842'>Job Application for Senior Data Scientist at Mode</a></h5> 
+<h5><a href='https://boards.greenhouse.io/modeanalytics/jobs/1931842'>Job Application for Senior Data Scientist at Mode</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -478,7 +482,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999697963178-sr-associate-data-scientist'>Visa Sr. Associate Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999697963178-sr-associate-data-scientist'>Visa Sr. Associate Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Arlington, VA, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -498,10 +502,6 @@ accordance with data protection law for the purposes described in our privacy?..
       Data Scientist - Remerge
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Berlin San Francisco New York Singapore Tokyo Seoul Beijing</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/j71cm7f7twxzan856pdhm9ustw'>Senior Data Science Recruiter | Averity</a></h5> 
-<p><span class="badge badge-light">New York, NY  New York City</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
